src/test/resources/tests/typeError/missingStructField.qg

init {
    var = new aStruct(1)
    var.thisDoesNotExist
}

run true

input(a,b) true

struct aStruct {
    aVal: number
}